making it to a line plotting tool

--- a/cartesian8.htm
+++ b/cartesian8.htm
@@ -1057,7 +1057,7 @@ function onKeyDown(event)
 }
 
 
-
+/*
 document.getElementById("circles_button").addEventListener("click",function(event){circles_activate(event)})
 document.getElementById("function_button").addEventListener("click",function(event){function_activate(event)})
 document.getElementById("line1").addEventListener("click",function(event){line_activate(event)})
@@ -1065,18 +1065,21 @@ document.getElementById("line2").addEventListener("click",function(event){line_d
 document.getElementById("curve1").addEventListener("click",function(event){curve_activate()})
 document.getElementById("curve2").addEventListener("click",function(event){curve_deactivate()})
 document.getElementById("point").addEventListener("click",function(event){points_activate()})
-
+*/
+circles_activate()
    </script>
 </head>
 <body>
+
    <canvas id="canvas" width="600" height="600" style=""  ></canvas>
-   <!-- inputing the function that will be plotted automatically -->
+   <!--
    <input type="button" class="button" value="A Line Between 2 Points" id = "circles_button" >
    <input type="button" class="button" value="FUNCTION" id = "function_button">
    <input type="text" id="function_input">
    <input type="button" class="button" value="Line Select" id = "line1"><input type="button" class="button" value="Line Unselect" id = "line2">
    <input type="button" class="button" value="Select A Curve" id = "curve1"> <input type="button" class="button" value="Unselect A Curve" id = "curve2">
    <input type="button" class="button" value="Create Points" id = "point">
-
+   -->
+<!-- This is a comment -->
 </body>
 </html>
